# pyclaw

./: .gitignore  .hashdist_petsc4py_stack.yaml  .hgignore  .stack.yaml  .travis.yml  .travis_build_petsc4py.sh  .travis_build_stack.sh  CHANGES.md  CODE_OF_CONDUCT.md  LICENSE.txt  Makefile.common  Makefile.rules  Makefile.variables  README.md  README.rst  cleanup_examples.py  environment.yml  hortlog -se --since=2024-10-01  noseTime.py  run_tests_on_travis.sh  setup.py
.circleci/: config.yml
.github/workflows/: CI.yml  main.yml  testing.yml
apps/: compare_solvers.py  py_example.py
apps/acoustics_1d_homogeneous/: Makefile  acoustics.py  (+2 more)
clawpack-4.5.0/: LICENSE.txt  README.txt  setenv.py
demo/: petsc_hello_world.py
development/: advect.py  advect_annotated.py  clawdata2pyclaw.py  driver.py  fPyWrapperExample.py  ksl_submit_testmpi4py.ll  rescale.f95  test_mpi4py.py  test_rescale.py
doc/: Makefile  PETScCLAW.tex  about.rst  apps.rst  basics.rst  classes.rst  clawpack_and_pyclaw.rst  conf.py  controller.rst  data.rst  design_doc.tex  develop.rst  differences.rst  for_developers.rst  future.rst  geometry.rst  going_further.rst  index.rst  io.rst  output.rst  parallel.rst  petclaw.rst  plotting.rst  portExample.rst  problem.rst  rp.rst  rulesProposal.rst  solution.rst  solvers.rst  started.rst  state.rst  tips.rst  troubleshooting.rst  tutorial.rst  util.rst
examples/: README.md  __init__.py  compare_solvers.py  setup.py
forestclaw/: __init__.py  test.py
gallery/: gallery.py  list_apps.py
petclaw/: cfl.py  controller.py  grid.py  log.config  plot.py  solution.py  util.py
pyclaw/: README.txt  __init__.py  controller.py  geometry.py  log.config  solution.py  solver.py  util.py
src/: .kslrun.py  advect.py  advect_annotated.py  driver.py  example_with_aux.py  py_example.py  setprob.data
src/forestclaw/: __init__.py  cfl.py  controller.py  geometry.py  meson.build  setup.py  solution.py  state.py  test.py
src/forestclaw/fileio/: __init__.py  ascii.py  test.py
src/forestclaw/io/: __init__.py  ascii.py  forestclaw.py  test.py
src/petclaw/: README.txt  __init__.py  cf1.py  cfl.py  clawpack.py  controller.py  data.py  geometry.py  grid.py  implicitclawpack.py  implicitclawpackfsolve.py  implicitsharpclaw.py  implicitsharpclawfsolve.py  log.config  meson.build  plot.py  runclaw.py  setup.py  sharpclaw.py  solution.py  solver.py  state.py  util.py
src/petclaw/classic/: clawpack.py  setup.py  solver.py
src/petclaw/clawpack/: clawpack.py  solver.py
src/petclaw/evolve/: __init__.py  clawpack.py  limiters.py  petclaw.py  recon.py  sharpclaw.py  solver.py
src/petclaw/evolve/rp/: rp_acoustics.py  rp_advection.py  rp_burgers.py  rp_euler.py  rp_shallow.py  rp_vc_advection.py
src/petclaw/fileio/: __init__.py  hdf5.py  petsc.py
src/petclaw/io/: __init__.py  ascii.py  hdf5.py  netcdf.py  petsc.py  petsc_io.py
src/petclaw/limiters/: __init__.py
src/petclaw/plotters/: Iplotclaw.py  TODO  __init__.py  colormaps.py  data.py  frametools.py  gaugetools.py  geoplot.py  multiframetools.py  plotclaw.py  plotpages.py
src/petclaw/sharpclaw/: setup.py  sharpclaw.py  solver.py
src/petclaw/tests/: test_io.py
src/petclaw/tests/test_data/shock_bubble_interaction_hdf/: claw0000.hdf  claw0001.hdf
src/petclaw/tests/test_data/shock_bubble_interaction_hdf_with_aux/: claw0000.hdf
src/pyclaw/: Makefile  Makefile.p4est  __init__.py  cfl.py  clawpack.py  controller.py  data.py  gauges.py  geometry.py  grid.py  implicitclawpack.py  log.config  meson.build  p4est.py  plot.py  pyclaw_p4est.c  runclaw.py  setup.py  sharpclaw.py  solution.py  solver.py  state.py  util.py
src/pyclaw/classic/: Makefile  clawpack.py  flux2.f90  flux3.f90  flux3fw.f90  inlinelimiter.f90  limiter.f90  philim.f90  setup.py  solver.py  solverjli.py  step1.f90  step3.f90  step3ds.f90
src/pyclaw/clawpack/: Makefile  __init__.py  clawpack.py  flux2.f  flux2.f90  flux3.f  flux3.f90  flux3fw.f  flux3fw.f90  limiter.f  philim.f90  spatdisc1.f  step1.f  step1.f90  step2.f  step2.f90  step2ds.f  step2ds.f90  step3.f  step3.f90  step3ds.f  step3ds.f90
src/pyclaw/evolve/: __init__.py  clawpack.py  limiters.py  recon.py  reconstruct.py  sharpclaw.py  solver.py
src/pyclaw/evolve/rp/: __init__.py  rp_acoustics.py  rp_advection.py  rp_burgers.py  rp_nel.py  rp_shallow.py  rp_tcp_advection.py  rp_vc_advection.py
src/pyclaw/evolve/weno/: reconstruct.f90  setup.py
src/pyclaw/fileio/: __init__.py  ascii.py  binary.py  claw_find_overlapped.py  claw_vtk.py  hdf5.py  netcdf.py  setup.py  vtk.py  vtkOverlappingAMR.py
src/pyclaw/geotools/: okada.py  topotools.py
src/pyclaw/io/: __init__.py  ascii.py  binary.py  hdf5.py  netcdf.py  petsc.py  setup.py  test_io.py
src/pyclaw/limiters/: __init__.py  recon.py  reconstruct.py  setup.py  tvd.py
src/pyclaw/limiters/weno/: codegen.py  reconstruct.c  setup.py
src/pyclaw/plotters/: Iplotclaw.py  data.py  frametools.py  gaugetools.py  plotclaw.py  plotpages.py
src/pyclaw/sharpclaw/: ClawParams.f90  Makefile  evec.f90  flux1.f90  flux1_2.f90  flux2.f90  flux3.f90  poly.f90  reconstruct.f90  setup.py  sharpclaw.py  solver.py  tfluct.f90  weno.f90  weno.py  workspace.f90  workspace2.f90
src/pyclaw/tests/: test_io.py  test_state.py
src/pyclaw/tests/test_data/advection_2d_binary/: fort.q0000  fort.t0000
src/pyclaw/tests/test_data/advection_2d_binary/claw0000/: claw0000_0_0.vti  claw0000_1_0.vti  claw0000_2_1.vti  claw0000_2_2.vti  claw0000_2_4.vti  claw0000_2_5.vti  claw0000_2_6.vti  claw0000_2_7.vti  claw0000_2_8.vti  claw0000_2_9.vti
src/pyclaw/tests/test_data/advection_2d_vtk/: claw0000.vthb
src/pyclaw/tests/test_data/advection_2d_vtk/claw0000/: claw0000_0.vti  claw0000_11.vti  claw0000_13.vti  claw0000_14.vti  claw0000_16.vti  claw0000_1_1.vti  claw0000_1_2.vti  claw0000_1_3.vti  claw0000_2.vti  claw0000_2_0.vti  claw0000_2_10.vti  claw0000_2_11.vti  claw0000_2_3.vti  claw0000_4.vti  claw0000_6.vti
test/: ac_sc_solution  acoustics2D_solution  parallel_env_sanity.py  sb_density  swsphere_height  test_acoustics.py  test_examples.py  test_sanity.py  util.py
(+1581 files in other folders)
